# clinvoice-rs

./: .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: rust-clippy.yml  rust.yml
examples/: .gitignore  2011-01.cli  bnl-template.tex  bnl-template.txt  clinvoice.toml
src/: color.rs  config.rs  data.rs  generate.rs  heatmap.rs  index.rs  latex.rs  lib.rs  log.rs  logger.rs  main.rs  markdown.rs  parse.rs  tracing.rs
tests/: cli_tests.rs  data_tests.rs  generate_tests.rs  index_tests.rs
tests/cli/01_log_year_all/: args.txt  expected.stdout
tests/cli/02_log_year_2010/: args.txt  expected.stdout
tests/cli/03_log_year_2011/: args.txt  clinvoice.toml  expected.stdout
tests/cli/04_log_month_all/: args.txt  expected.stdout
tests/cli/05_log_month_2010-11/: args.txt  expected.stdout
tests/cli/06_log_month_2010-12_2011-01/: args.txt  expected.stdout
tests/cli/07_log_day_all/: args.txt  expected.stdout
tests/cli/08_log_day_2010-11-01/: args.txt  expected.stdout
tests/cli/09_log_day_2010-11-01_2010-12-01/: args.txt  expected.stdout
tests/cli/10_log_full_all/: args.txt  expected.stdout
tests/cli/11_log_full_2010-11-01/: args.txt  expected.stdout
tests/cli/12_log_full_2010-11-01_2010-12-01/: args.txt  expected.stdout
tests/cli/13_generate_txt_single_file/: clinvoice.toml  template.txt  timesheet.cli
tests/cli/14_generate_latex_single_file/: args.txt  clinvoice.toml  expected.output  template.tex  timesheet.cli
tests/cli/15_generate_txt_multiple_input_files/: args.txt  expected.output  timesheet1.cli  timesheet2.cli
tests/cli/16_generate_txt_index_seq_1/: expected.output  test_index_seq  timesheet.cli
tests/cli/17_generate_txt_index_seq_2_same_dates/: args.txt  clinvoice.toml  expected.output  test_index_seq
tests/cli/18_generate_txt_index_seq_3_diff_dates/: args.txt  expected.output  template.txt  test_index_seq  timesheet.cli
(+10 files in other folders)
