[package]
name = "clinvoice"
version = "0.1.0"
edition = "2021"

[lib]
name = "clinvoice"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
atty = "0.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
tera = "1"
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }

[dev-dependencies]
ctor = "0.2.1"
tempfile = "3.20.0"
clinvoice = { path = "." }
