[package]
name = "clinvoice"
version = "0.1.0"
edition = "2021"

[lib]
name = "clinvoice"

[[bin]]
name = "clinvoice"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
atty = "0.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
tera = "1"
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
fs2 = "0.4"
shlex = "0.1"
regex = "1.5"
num-traits = "0.2.19"
term_size = "0.3.2"

[dev-dependencies]
ctor = "0.2.1"
tempfile = "3.20.0"
clinvoice = { path = "." }
serial_test = "3.2.0"
rstest = "0.25.0"
